[package]
name = "derive_derive"
version = "2.0.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]

homepage = "https://github.com/scooter-dangle/derive_derive-rs"
repository = "https://github.com/scooter-dangle/derive_derive-rs"
description = "Macros for auto-deriving derive::Derive example trait"

license = "Apache-2.0"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[lib]
proc-macro = true
